src/parser.rs
// # Parser

// ## Prelude

use crate::lexer::Token;
use mech_core::*;

#[cfg(not(feature = "no-std"))] use core::fmt;
#[cfg(feature = "no-std")] use alloc::fmt;
#[cfg(feature = "no-std")] use alloc::string::String;
#[cfg(feature = "no-std")] use alloc::vec::Vec;
use nom::{
  IResult,
  branch::alt,
  sequence::tuple,
  combinator::{opt,eof},
  multi::{many1, many_till, many0, separated_list1},
};

use unicode_segmentation::*;

// ## Parser Node

#[derive(Clone, PartialEq)]
pub enum Node {
  Root{ children: Vec<Node> },
  Block{ children: Vec<Node> },
  Transformation{ children: Vec<Node> },
  Select { children: Vec<Node> },
  Whenever { children: Vec<Node> },
  Wait { children: Vec<Node> },
  Until { children: Vec<Node> },
  Insert { children: Vec<Node> },
  VariableDefine { children: Vec<Node> },
  TableDefine { children: Vec<Node> },
  TableSelect { children: Vec<Node> },
  AddRow { children: Vec<Node> },
  Column { children: Vec<Node> },
  IdentifierOrConstant { children: Vec<Node> },
  Table { children: Vec<Node> },
  Number { children: Vec<Node> },
  DigitOrComma {children: Vec<Node> },
  MathExpression { children: Vec<Node> },
  SelectExpression { children: Vec<Node> },
  FilterExpression { children: Vec<Node> },
  Comparator { children: Vec<Node> },
  InfixOperation { children: Vec<Node>},
  Repeat{ children: Vec<Node> },
  TableIdentifier{ children: Vec<Node> },
  Identifier{ children: Vec<Node> },
  Alpha{ children: Vec<Node> },
  DotIndex{ children: Vec<Node> },
  SubscriptIndex{ children: Vec<Node> },
  SubscriptList{ children: Vec<Node> },
  Subscript{ children: Vec<Node> },
  LogicOperator{ children: Vec<Node> },
  LogicExpression{ children: Vec<Node> },
  Range,
  SelectAll,
  Index{ children: Vec<Node> },
  Data{ children: Vec<Node> },
  SetData{ children: Vec<Node> },
  SetOperator{ children: Vec<Node> },
  SplitData{ children: Vec<Node> },
  JoinData{ children: Vec<Node> },
  AddOperator{ children: Vec<Node> },
  WatchOperator {children: Vec<Node>},
  Equality{ children: Vec<Node> },
  Expression{ children: Vec<Node> },
  AnonymousTable{ children: Vec<Node> },
  EmptyTable{ children: Vec<Node> },
  AnonymousMatrix{ children: Vec<Node> },
  TableRow{ children: Vec<Node> },
  Binding{ children: Vec<Node> },
  FunctionBinding{ children: Vec<Node> },
  Attribute{ children: Vec<Node> },
  TableHeader{ children: Vec<Node> },
  InlineTable{ children: Vec<Node> },
  Constant{ children: Vec<Node> },
  Infix{ children: Vec<Node> },
  Program{ children: Vec<Node> },
  Title{ children: Vec<Node> },
  Subtitle{ children: Vec<Node> },
  SectionTitle{ children: Vec<Node> },
  Head{ children: Vec<Node> },
  Body{ children: Vec<Node> },
  Statement{ children: Vec<Node> },
  StatementOrExpression{ children: Vec<Node> },
  DataOrConstant{ children: Vec<Node> },
  IdentifierCharacter{ children: Vec<Node> },
  Fragment{ children: Vec<Node> },
  Node{ children: Vec<Node> },
  NewLineOrEnd{ children: Vec<Node> },
  Alphanumeric{ children: Vec<Node> },
  Paragraph{ children: Vec<Node> },
  ParagraphText{ children: Vec<Node> },
  FormattedText{ children: Vec<Node> },
  InlineMechCode{ children: Vec<Node> },
  InlineCode{ children: Vec<Node> },
  Bold{ children: Vec<Node> },
  Italic{ children: Vec<Node> },
  Hyperlink{ children: Vec<Node> },
  BlockQuote{ children: Vec<Node> },
  CodeBlock{ children: Vec<Node> },
  MechCodeBlock{ children: Vec<Node> },
  UnorderedList{ children: Vec<Node> },
  ListItem{ children: Vec<Node> },
  String{ children: Vec<Node> },
  StringInterpolation{ children: Vec<Node> },
  Word{ children: Vec<Node> },
  Emoji{ children: Vec<Node> },
  Section{ children: Vec<Node> },
  ProseOrCode{ children: Vec<Node> },
  Whitespace{ children: Vec<Node> },
  SpaceOrTab{ children: Vec<Node> },
  NewLine{ children: Vec<Node> },
  Text{ children: Vec<Node> },
  Punctuation{ children: Vec<Node> },
  L0Infix{ children: Vec<Node> },
  L1Infix{ children: Vec<Node> },
  L2Infix{ children: Vec<Node> },
  L3Infix{ children: Vec<Node> },
  L4Infix{ children: Vec<Node> },
  L5Infix{ children: Vec<Node> },
  L0{ children: Vec<Node> },
  L1{ children: Vec<Node> },
  L2{ children: Vec<Node> },
  L3{ children: Vec<Node> },
  L4{ children: Vec<Node> },
  L5{ children: Vec<Node> },
  L6{ children: Vec<Node> },
  Function{ children: Vec<Node> },
  Negation{ children: Vec<Node> },
  Not{ children: Vec<Node> },
  ParentheticalExpression{ children: Vec<Node> },
  CommentSigil{ children: Vec<Node> },
  Comment{children: Vec<Node>},
  Any{children: Vec<Node>},
  Symbol{children: Vec<Node>},
  StateMachine{children: Vec<Node>},
  StateTransition{children: Vec<Node>},
  Quantity{children: Vec<Node>},
  Value{children: Vec<Node>},
  BooleanLiteral{children: Vec<Node>},
  NumberLiteral{children: Vec<Node>},
  FloatLiteral{chars: Vec<char>},
  DecimalLiteral{chars: Vec<char>},
  HexadecimalLiteral{chars: Vec<char>},
  OctalLiteral{chars: Vec<char>},
  BinaryLiteral{chars: Vec<char>},
  RationalNumber{children: Vec<Node>},
  Token{token: Token, chars: Vec<char>},
  KindAnnotation{children: Vec<Node>},
  ReshapeColumn,
  Add,
  Subtract,
  Multiply,
  Divide,
  Exponent,
  LessThanEqual,
  GreaterThanEqual,
  Equal,
  NotEqual,
  LessThan,
  GreaterThan,
  And,
  Or,
  Xor,
  Empty,
  Null,
  True,
  False,
}

impl fmt::Debug for Node {
  #[inline]
  fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
    print_recurse(self, 1);
    Ok(())
  }
}

pub fn print_recurse(node: &Node, level: usize) {
  spacer(level);
  let children: Option<&Vec<Node>> = match node {
    Node::Root{children} => {print!("Root\n"); Some(children)},
    Node::Block{children} => {print!("Block\n"); Some(children)},
    Node::Transformation{children} => {print!("Transformation\n"); Some(children)},
    Node::Select{children} => {print!("Select\n"); Some(children)},
    Node::Whenever{children} => {print!("Whenever\n"); Some(children)},
    Node::Insert{children} => {print!("Insert\n"); Some(children)},
    Node::MathExpression{children} => {print!("MathExpression\n"); Some(children)},
    Node::SelectExpression{children} => {print!("SelectExpression\n"); Some(children)},
    Node::Comparator{children} => {print!("Comparator\n"); Some(children)},
    Node::FilterExpression{children} => {print!("FilterExpression\n"); Some(children)},
    Node::AnonymousTable{children} => {print!("AnonymousTable\n"); Some(children)},
    Node::EmptyTable{children} => {print!("EmptyTable\n"); Some(children)},
    Node::AnonymousMatrix{children} => {print!("AnonymousMatrix\n"); Some(children)},
    Node::TableRow{children} => {print!("TableRow\n"); Some(children)},
    Node::Table{children} => {print!("Table\n"); Some(children)},
    Node::Number{children} => {print!("Number\n"); Some(children)},
    Node::DigitOrComma{children} => {print!("DigitOrComma\n"); Some(children)},
    Node::Alphanumeric{children} => {print!("Alphanumeric\n"); Some(children)},
    Node::Word{children} => {print!("Word\n"); Some(children)},
    Node::Emoji{children} => {print!("Emoji\n"); Some(children)},
    Node::Paragraph{children} => {print!("Paragraph\n"); Some(children)},
    Node::ParagraphText{children} => {print!("ParagraphText\n"); Some(children)},
    Node::FormattedText{children} => {print!("FormattedText\n"); Some(children)},
    Node::InlineMechCode{children} => {print!("InlineMechCode\n"); Some(children)},
    Node::InlineCode{children} => {print!("InlineCode\n"); Some(children)},
    Node::MechCodeBlock{children} => {print!("MechCodeBlock\n"); Some(children)},
    Node::Bold{children} => {print!("Bold\n"); Some(children)},
    Node::Italic{children} => {print!("Italic\n"); Some(children)},
    Node::Hyperlink{children} => {print!("Hyperlink\n"); Some(children)},
    Node::BlockQuote{children} => {print!("BlockQuote\n"); Some(children)},
    Node::CodeBlock{children} => {print!("CodeBlock\n"); Some(children)},
    Node::UnorderedList{children} => {print!("UnorderedList\n"); Some(children)},
    Node::ListItem{children} => {print!("ListItem\n"); Some(children)},
    Node::String{children} => {print!("String\n"); Some(children)},
    Node::StringInterpolation{children} => {print!("StringInterpolation\n"); Some(children)},
    Node::VariableDefine{children} => {print!("VariableDefine\n"); Some(children)},
    Node::TableDefine{children} => {print!("TableDefine\n"); Some(children)},
    Node::TableSelect{children} => {print!("TableSelect\n"); Some(children)},
    Node::AddRow{children} => {print!("AddRow\n"); Some(children)},
    Node::Column{children} => {print!("Column\n"); Some(children)},
    Node::Binding{children} => {print!("Binding\n"); Some(children)},
    Node::FunctionBinding{children} => {print!("FunctionBinding\n"); Some(children)},
    Node::InlineTable{children} => {print!("InlineTable\n"); Some(children)},
    Node::TableHeader{children} => {print!("TableHeader\n"); Some(children)},
    Node::Attribute{children} => {print!("Attribute\n"); Some(children)},
    Node::IdentifierOrConstant{children} => {print!("IdentifierOrConstant\n"); Some(children)},
    Node::InfixOperation{children} => {print!("Infix\n"); Some(children)},
    Node::Repeat{children} => {print!("Repeat\n"); Some(children)},
    Node::Identifier{children} => {print!("Identifier\n"); Some(children)},
    Node::TableIdentifier{children} => {print!("TableIdentifier\n"); Some(children)},
    Node::DotIndex{children} => {print!("DotIndex\n"); Some(children)},
    Node::SubscriptIndex{children} => {print!("SubscriptIndex\n"); Some(children)},
    Node::SubscriptList{children} => {print!("SubscriptList\n"); Some(children)},
    Node::Subscript{children} => {print!("Subscript\n"); Some(children)},
    Node::LogicOperator{children} => {print!("LogicOperator\n"); Some(children)},
    Node::LogicExpression{children} => {print!("LogicExpression\n"); Some(children)},
    Node::Range => {print!("Range\n"); None},
    Node::SelectAll => {print!("SelectAll\n"); None},
    Node::Index{children} => {print!("Index\n"); Some(children)},
    Node::Equality{children} => {print!("Equality\n"); Some(children)},
    Node::Data{children} => {print!("Data\n"); Some(children)},
    Node::SetData{children} => {print!("SetData\n"); Some(children)},
    Node::SplitData{children} => {print!("SplitData\n"); Some(children)},
    Node::JoinData{children} => {print!("JoinData\n"); Some(children)},
    Node::Wait{children} => {print!("Wait\n"); Some(children)},
    Node::Until{children} => {print!("Until\n"); Some(children)},
    Node::SetOperator{children} => {print!("SetOperator\n"); Some(children)},
    Node::AddOperator{children} => {print!("AddOperator\n"); Some(children)},
    Node::WatchOperator{children} => {print!("WatchOperator\n"); Some(children)},
    Node::Infix{children} => {print!("Infix\n"); Some(children)},
    Node::Expression{children} => {print!("Expression\n"); Some(children)},
    Node::Constant{children} => {print!("Constant\n"); Some(children)},
    Node::Program{children} => {print!("Program\n"); Some(children)},
    Node::IdentifierCharacter{children} => {print!("IdentifierCharacter\n"); Some(children)},
    Node::Title{children} => {print!("Title\n"); Some(children)},
    Node::Subtitle{children} => {print!("Subtitle\n"); Some(children)},
    Node::SectionTitle{children} => {print!("SectionTitle\n"); Some(children)},
    Node::Section{children} => {print!("Section\n"); Some(children)},
    Node::Statement{children} => {print!("Statement\n"); Some(children)},
    Node::StatementOrExpression{children} => {print!("StatementOrExpression\n"); Some(children)},
    Node::DataOrConstant{children} => {print!("DataOrConstant\n"); Some(children)},
    Node::NewLineOrEnd{children} => {print!("NewLineOrEnd\n"); Some(children)},
    Node::Fragment{children} => {print!("Fragment\n"); Some(children)},
    Node::Body{children} => {print!("Body\n"); Some(children)},
    Node::Head{children} => {print!("Head\n"); Some(children)},
    Node::Node{children} => {print!("Node\n"); Some(children)},
    Node::Text{children} => {print!("Text\n"); Some(children)},
    Node::Punctuation{children} => {print!("Punctuation\n"); Some(children)},
    Node::L0Infix{children} => {print!("L0Infix\n"); Some(children)},
    Node::L1Infix{children} => {print!("L1Infix\n"); Some(children)},
    Node::L2Infix{children} => {print!("L2Infix\n"); Some(children)},
    Node::L3Infix{children} => {print!("L3Infix\n"); Some(children)},
    Node::L4Infix{children} => {print!("L4Infix\n"); Some(children)},
    Node::L5Infix{children} => {print!("L5Infix\n"); Some(children)},
    Node::L0{children} => {print!("L0\n"); Some(children)},
    Node::L1{children} => {print!("L1\n"); Some(children)},
    Node::L2{children} => {print!("L2\n"); Some(children)},
    Node::L3{children} => {print!("L3\n"); Some(children)},
    Node::L4{children} => {print!("L4\n"); Some(children)},
    Node::L5{children} => {print!("L5\n"); Some(children)},
    Node::L6{children} => {print!("L6\n"); Some(children)},
    Node::Function{children} => {print!("Function\n"); Some(children)},
    Node::Negation{children} => {print!("Negation\n"); Some(children)},
    Node::Not{children} => {print!("Not\n"); Some(children)},
    Node::ParentheticalExpression{children} => {print!("ParentheticalExpression\n"); Some(children)},
    Node::ProseOrCode{children} => {print!("ProseOrCode\n"); Some(children)},
    Node::Whitespace{children} => {print!("Whitespace\n"); Some(children)},
    Node::SpaceOrTab{children} => {print!("SpaceOrTab\n"); Some(children)},
    Node::NewLine{children} => {print!("NewLine\n"); Some(children)},
    Node::Token{token, chars} => {print!("Token({:?} ({:?}))\n", token, chars); None},
    Node::CommentSigil{children} => {print!("CommentSigil\n"); Some(children)},
    Node::Comment{children} => {print!("Comment\n"); Some(children)},
    Node::Any{children} => {print!("Any\n"); Some(children)},
    Node::Symbol{children} => {print!("Symbol\n"); Some(children)},
    Node::Quantity{children} => {print!("Quantity\n"); Some(children)},
    Node::NumberLiteral{children} => {print!("NumberLiteral\n"); Some(children)},
    Node::FloatLiteral{chars} => {print!("FloatLiteral({:?})\n", chars); None},
    Node::DecimalLiteral{chars} => {print!("DecimalLiteral({:?})\n", chars); None},
    Node::HexadecimalLiteral{chars} => {print!("HexadecimalLiteral({:?})\n", chars); None},
    Node::OctalLiteral{chars} => {print!("OctalLiteral({:?})\n", chars); None},
    Node::BinaryLiteral{chars} => {print!("BinaryLiteral({:?})\n", chars); None},
    Node::RationalNumber{children} => {print!("RationalNumber\n"); Some(children)},
    Node::StateMachine{children} => {print!("StateMachine\n"); Some(children)},
    Node::StateTransition{children} => {print!("StateTransition\n"); Some(children)},
    Node::Value{children} => {print!("Value\n"); Some(children)},
    Node::KindAnnotation{children} => {print!("KindAnnotation\n"); Some(children)},
    Node::BooleanLiteral{children} => {print!("BooleanLiteral\n"); Some(children)},
    Node::Add => {print!("Add\n",); None},
    Node::Subtract => {print!("Subtract\n",); None},
    Node::Multiply => {print!("Multiply\n",); None},
    Node::Divide => {print!("Divide\n",); None},
    Node::Exponent => {print!("Exponent\n",); None},
    Node::LessThan => {print!("LessThan\n",); None},
    Node::GreaterThan => {print!("GreaterThan\n",); None},
    Node::GreaterThanEqual => {print!("GreaterThanEqual\n",); None},
    Node::LessThanEqual => {print!("LessThanEqual\n",); None},
    Node::Equal => {print!("Equal\n",); None},
    Node::NotEqual => {print!("NotEqual\n",); None},
    Node::And => {print!("And\n",); None},
    Node::Or => {print!("Or\n",); None},
    Node::Xor => {print!("Xor\n",); None},
    Node::Empty => {print!("Empty\n",); None},
    Node::Null => {print!("Null\n",); None},
    Node::ReshapeColumn => {print!("ReshapeColumn\n",); None},
    Node::False => {print!("True\n",); None},
    Node::True => {print!("False\n",); None},
    Node::Alpha{children} => {print!("Alpha\n"); Some(children)},
  };

  match children {
    Some(childs) => {
      for child in childs {
        print_recurse(child, level + 1)
      }
    },
    _ => (),
  }
}

pub fn spacer(width: usize) {
  let limit = if width > 0 {
    width - 1
  } else {
    width
  };
  for _ in 0..limit {
    print!("│");
  }
  print!("├");
}


#[derive(Debug,Clone)]
pub struct ParseString<'a> {
  pub data: Vec<&'a str>,
}

impl<'a> ParseString<'a> {
  pub fn len(&self) -> usize {
    self.data.len()
  }
}

impl<'a> nom::InputLength for ParseString<'a> {
  fn input_len(&self) -> usize {
    self.data.len()
  }
}

pub fn parse(text: &str) -> Result<Node,MechError> {

  let graphemes = UnicodeSegmentation::graphemes(text, true).collect::<Vec<&str>>();
  let parse_tree = parse_mech(ParseString{data: graphemes});
  match parse_tree {
    Ok((rest, tree)) => {
      let unparsed = rest.data.iter().map(|s| String::from(*s)).collect::<String>();
      if unparsed != "" {
        Err(MechError{id: 3302, kind: MechErrorKind::GenericError(unparsed)})
      } else { 
        Ok(tree)
      }
    },
    Err(q) => {
      Err(MechError{id: 3303, kind: MechErrorKind::None})
    }
  }
}

pub fn parse_fragment(text: &str) -> Result<Node,MechError> {

  let graphemes = UnicodeSegmentation::graphemes(text, true).collect::<Vec<&str>>();
  let parse_tree = parse_mech_fragment(ParseString{data: graphemes});
  match parse_tree {
    Ok((rest, tree)) => {
      let unparsed = rest.data.iter().map(|s| String::from(*s)).collect::<String>();
      if unparsed != "" {
        Err(MechError{id: 3402, kind: MechErrorKind::GenericError(unparsed)})
      } else { 
        Ok(tree)
      }
    },
    Err(q) => {
      Err(MechError{id: 3403, kind: MechErrorKind::None})
    }
  }
}

pub fn tag(tag: &str) -> impl Fn(ParseString) -> IResult<ParseString, ParseString>  {
  let tag = tag.to_string();
  move |mut input: ParseString| {
    if input.len() == 0 {
      return Err(nom::Err::Error(nom::error::Error::new(input, nom::error::ErrorKind::Tag)))
    }
    let tag_graphemes = tag.graphemes(true).collect::<Vec<&str>>();
    let tag_len = tag_graphemes.len();
    if tag_graphemes.iter().zip(input.data.iter().take(tag_len)).all(|(t,i)| t==i) {
      let rest = input.data.split_off(tag_len);
      Ok((ParseString{data: rest}, input))
    } else {
      Err(nom::Err::Error(nom::error::Error::new(input, nom::error::ErrorKind::Tag)))
    }
  }
}

pub fn ascii_tag(tag: &str) -> impl Fn(ParseString) -> IResult<ParseString, String>  {
  let tag = tag.to_string();
  move |mut input: ParseString| {
    if input.len() == 0 {
      return Err(nom::Err::Error(nom::error::Error::new(input, nom::error::ErrorKind::Tag)))
    }
    let tag_graphemes = tag.graphemes(true).collect::<Vec<&str>>();
    let tag_len = tag_graphemes.len();
    if tag_graphemes.iter().zip(input.data.iter().take(tag_len)).all(|(t,i)| t==i) {
      let rest = input.data.split_off(tag_len);
      Ok((ParseString{data: rest}, input.data[0].to_string()))
    } else {
      Err(nom::Err::Error(nom::error::Error::new(input, nom::error::ErrorKind::Tag)))
    }
  }
}

macro_rules! leaf {
  ($name:ident, $byte:expr, $token:expr) => (
    fn $name(input: ParseString) -> IResult<ParseString, Node> {
      let (input, _) = ascii_tag($byte)(input)?;
      Ok((input, Node::Token{token: $token, chars: $byte.chars().collect::<Vec<char>>()}))
    }
  )
}

leaf!{at, "@", Token::At}
leaf!{hashtag, "#", Token::HashTag}
leaf!{period, ".", Token::Period}
leaf!{colon, ":", Token::Colon}
leaf!{comma, ",", Token::Comma}
leaf!{apostrophe, "'", Token::Apostrophe}
leaf!{left_bracket, "[", Token::LeftBracket}
leaf!{right_bracket, "]", Token::RightBracket}
leaf!{left_parenthesis, "(", Token::LeftParenthesis}
leaf!{right_parenthesis, ")", Token::RightParenthesis}
leaf!{left_brace, "{", Token::LeftBrace}
leaf!{right_brace, "}", Token::RightBrace}
leaf!{equal, "=", Token::Equal}
leaf!{left_angle, "<", Token::LessThan}
leaf!{right_angle, ">", Token::GreaterThan}
leaf!{exclamation, "!", Token::Exclamation}
leaf!{question, "?", Token::Question}
leaf!{plus, "+", Token::Plus}
leaf!{dash, "-", Token::Dash}
leaf!{underscore, "_", Token::Underscore}
leaf!{asterisk, "*", Token::Asterisk}
leaf!{slash, "/", Token::Slash}
leaf!{backslash, "\\", Token::Backslash}
leaf!{caret, "^", Token::Caret}
leaf!{space, " ", Token::Space}
leaf!{tab, "\t", Token::Tab}
leaf!{tilde, "~", Token::Tilde}
leaf!{grave, "`", Token::Grave}
leaf!{bar, "|", Token::Bar}
leaf!{quote, "\"", Token::Quote}
leaf!{ampersand, "&", Token::Ampersand}
leaf!{semicolon, ";", Token::Semicolon}
leaf!{new_line_char, "\n", Token::Newline}
leaf!{carriage_return, "\r", Token::CarriageReturn}

// ## The Basics

fn emoji_grapheme(mut input: ParseString) -> IResult<ParseString, String> {
  if input.data.len() >= 1 {
    let rest = input.data.split_off(1);
    let mut adata = input.data[0].chars();
    match adata.next() {
      Some(c) => {
        if !c.is_ascii() && !c.is_alphabetic() {
          return Ok((ParseString{data: rest}, input.data[0].to_string()))
        } else {
          return Err(nom::Err::Error(nom::error::Error::new(input, nom::error::ErrorKind::Tag)))
        }
      }
      None => {return Err(nom::Err::Error(nom::error::Error::new(input, nom::error::ErrorKind::Tag)));}
    }
  }
  Err(nom::Err::Error(nom::error::Error::new(input, nom::error::ErrorKind::Tag)))
}

fn emoji(input: ParseString) -> IResult<ParseString, Node> {
  let (input, matching) = many1(emoji_grapheme)(input)?;
  let chars: Vec<Node> = matching.iter().map(|b| Node::Token{token: Token::Emoji, chars: b.chars().collect::<Vec<char>>()}).collect();
  Ok((input, Node::Emoji{children: chars}))
}

fn word(input: ParseString) -> IResult<ParseString, Node> {
  let (input, matching) = many1(alpha)(input)?;
  let chars: Vec<Node> = matching.iter().map(|b| Node::Token{token: Token::Alpha, chars: b.chars().collect::<Vec<char>>()}).collect();
  Ok((input, Node::Word{children: chars}))
}

fn alpha(mut input: ParseString) -> IResult<ParseString, String> {
  if input.data.len() >= 1 {
    let rest = input.data.split_off(1);
    let mut adata = input.data[0].chars();
    if adata.next().unwrap().is_alphabetic() {
      return Ok((ParseString{data: rest}, input.data[0].to_string()))
    } else {
      return Err(nom::Err::Error(nom::error::Error::new(input, nom::error::ErrorKind::Tag)))
    }
  }
  return Err(nom::Err::Error(nom::error::Error::new(input, nom::error::ErrorKind::Tag)))
}

fn digit(mut input: ParseString) -> IResult<ParseString, String> {
  if input.data.len() >= 1 {
    let rest = input.data.split_off(1);
    let mut adata = input.data[0].chars();
    if adata.next().unwrap().is_numeric() {
      return Ok((ParseString{data: rest}, input.data[0].to_string()))
    } else {
      return Err(nom::Err::Error(nom::error::Error::new(input, nom::error::ErrorKind::Tag)))
    }
  }
  return Err(nom::Err::Error(nom::error::Error::new(input, nom::error::ErrorKind::Tag)))
}

fn digit1(input: ParseString) -> IResult<ParseString, Vec<String>> {
  let result = many1(digit)(input)?;
  Ok(result)
}

fn digit0(input: ParseString) -> IResult<ParseString, Vec<String>> {
  let result = many0(digit)(input)?;
  Ok(result)
}

fn bin_digit(input: ParseString) -> IResult<ParseString, String> {
  let result = alt((ascii_tag("1"),ascii_tag("0")))(input)?;
  Ok(result)
}

fn hex_digit(input: ParseString) -> IResult<ParseString, String> {
  let result = alt((digit, ascii_tag("a"), ascii_tag("b"), ascii_tag("c"), ascii_tag("d"), ascii_tag("e"), ascii_tag("f"), 
                           ascii_tag("A"), ascii_tag("B"), ascii_tag("C"), ascii_tag("D"), ascii_tag("E"), ascii_tag("F")))(input)?;
  Ok(result)
}

fn oct_digit(input: ParseString) -> IResult<ParseString, String> {
  let result = alt((ascii_tag("0"),ascii_tag("1"),ascii_tag("2"),ascii_tag("3"),ascii_tag("4"),ascii_tag("5"),ascii_tag("6"),ascii_tag("7")))(input)?;
  Ok(result)
}

fn number(input: ParseString) -> IResult<ParseString, Node> {
  let (input, matching) = digit1(input)?;
  let chars: Vec<Node> = matching.iter().map(|b| Node::Token{token: Token::Digit, chars: b.chars().collect::<Vec<char>>()}).collect();
  Ok((input, Node::Number{children: chars}))
}

fn punctuation(input: ParseString) -> IResult<ParseString, Node> {
  let (input, punctuation) = alt((period, exclamation, question, comma, colon, semicolon, dash, apostrophe, left_parenthesis, right_parenthesis, left_angle, right_angle, left_brace, right_brace))(input)?;
  Ok((input, Node::Punctuation{children: vec![punctuation]}))
}

fn symbol(input: ParseString) -> IResult<ParseString, Node> {
  let (input, symbol) = alt((ampersand, bar, at, slash, backslash, hashtag, equal, tilde, plus, asterisk, caret, underscore))(input)?;
  Ok((input, Node::Symbol{children: vec![symbol]}))
}

fn paragraph_symbol(input: ParseString) -> IResult<ParseString, Node> {
  let (input, symbol) = alt((ampersand, at, slash, backslash, asterisk, caret, underscore))(input)?;
  Ok((input, Node::Symbol{children: vec![symbol]}))
}

fn text(input: ParseString) -> IResult<ParseString, Node> {
  let (input, word) = many1(alt((word, space, number, punctuation, symbol, emoji)))(input)?;
  Ok((input, Node::Text{children: word}))
}

fn paragraph_rest(input: ParseString) -> IResult<ParseString, Node> {
  let (input, word) = many1(alt((word, space, number, punctuation, paragraph_symbol, quote, emoji)))(input)?;
  Ok((input, Node::Text{children: word}))
}

fn paragraph_starter(input: ParseString) -> IResult<ParseString, Node> {
  let (input, word) = many1(alt((word, number, quote, left_angle, right_angle, left_bracket, right_bracket, period, exclamation, question, comma, colon, semicolon, left_parenthesis, right_parenthesis, emoji)))(input)?;
  Ok((input, Node::Text{children: word}))
}

fn identifier(input: ParseString) -> IResult<ParseString, Node> {
  let (input, _) = many0(space)(input)?;
  let (input, (word, mut rest)) = tuple((alt((word,emoji)), many0(alt((word, number, dash, slash, emoji)))))(input)?;
  let mut id = vec![word];
  id.append(&mut rest);
  Ok((input, Node::Identifier{children: id}))
}

fn boolean_literal(input: ParseString) -> IResult<ParseString, Node> {
  let (input, boolean) = alt((true_literal, false_literal))(input)?;
  Ok((input, Node::BooleanLiteral{children: vec![boolean]}))
}

fn true_literal(input: ParseString) -> IResult<ParseString, Node> {
  let (input, _) = ascii_tag("t")(input)?;
  let (input, _) = ascii_tag("r")(input)?;
  let (input, _) = ascii_tag("u")(input)?;
  let (input, _) = ascii_tag("e")(input)?;
  Ok((input, Node::True))
}
